--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "description": "ABANDONED Front End Micro Services [WIP]",
   "version": "1.3.1",
   "author": {
-    "email": "zac@zacanger.com",
-    "name": "Zac Anger",
-    "url": "http://zacanger.com"
+    "name": "Autumn Z"
   },
   "license": "MIT",
   "main": "index.js",
@@ -14,12 +12,12 @@
     "test": "npm run test:lint",
     "test:lint": "standard"
   },
-  "homepage": "https://github.com/zacanger/fems#readme",
+  "homepage": "https://github.com/zautumnz/fems#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zacanger/fems.git"
+    "url": "https://github.com/zautumnz/fems.git"
   },
-  "bugs": "https://github.com/zacanger/fems/issues",
+  "bugs": "https://github.com/zautumnz/fems/issues",
   "keywords": [
     "fed",
     "fems",
